backtracking, acyclic graph

--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2123,6 +2123,9 @@
     <ClCompile Include="UVa\10900\10911.cpp">
       <Filter>UVaOJ\10900</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\100\124.cpp">
+      <Filter>UVaOJ\100\120</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
