--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2138,6 +2138,9 @@
     <ClCompile Include="UVa\400\477.cpp">
       <Filter>UVaOJ\400\470</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\400\478.cpp">
+      <Filter>UVaOJ\400\470</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
