--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2141,6 +2141,9 @@
     <ClCompile Include="UVa\400\478.cpp">
       <Filter>UVaOJ\400\470</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10100\10195.cpp">
+      <Filter>UVaOJ\10100\10190</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
