--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2147,6 +2147,9 @@
     <ClCompile Include="UVa\10200\10221.cpp">
       <Filter>UVaOJ\10200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10200\10286.cpp">
+      <Filter>UVaOJ\10200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
