circle, triangle, geometry

--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2153,6 +2153,9 @@
     <ClCompile Include="UVa\10300\10347.cpp">
       <Filter>UVaOJ\10300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10400\10432.cpp">
+      <Filter>UVaOJ\10400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
