--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2156,6 +2156,9 @@
     <ClCompile Include="UVa\10400\10432.cpp">
       <Filter>UVaOJ\10400</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11100\11152.cpp">
+      <Filter>UVaOJ\11100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
