--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2165,6 +2165,9 @@
     <ClCompile Include="UVa\10100\10112.cpp">
       <Filter>UVaOJ\10100\10110</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\100\191.cpp">
+      <Filter>UVaOJ\100\190</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
@@ -2228,6 +2231,9 @@
       <Filter>Library\Computational Geometry</Filter>
     </ClInclude>
     <ClInclude Include="Library\triangle.h">
+      <Filter>Library\Computational Geometry</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\segment.h">
       <Filter>Library\Computational Geometry</Filter>
     </ClInclude>
   </ItemGroup>
