--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2171,6 +2171,9 @@
     <ClCompile Include="UVa\300\378.cpp">
       <Filter>UVaOJ\300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\400\438.cpp">
+      <Filter>UVaOJ\400\430</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
