--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2177,6 +2177,9 @@
     <ClCompile Include="UVa\700\748.cpp">
       <Filter>UVaOJ\700</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\800\834.cpp">
+      <Filter>UVaOJ\800</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
@@ -2368,6 +2371,9 @@
     </None>
     <None Include="UVa\700\748.py">
       <Filter>UVaOJ\700</Filter>
+    </None>
+    <None Include="UVa\800\834.py">
+      <Filter>UVaOJ\800</Filter>
     </None>
   </ItemGroup>
 </Project>
